css/pixel-editor.scss
@import 'colors';
@import 'zindex';
body {
  background: color(indent-dark);
  font-family: 'Roboto', sans-serif;
  margin: 0;
  padding: 0;
  color: #fff;
  font-size: 14px;
  width: 100%;
  height: 100%;
  overflow: hidden;
  -moz-user-select: none;
  /* Firefox */
  -ms-user-select: none;
  /* Internet Explorer */
  -khtml-user-select: none;
  /* KHTML browsers (e.g. Konqueror) */
  -webkit-user-select: none;
  /* Chrome, Safari, and Opera */
  -webkit-touch-callout: none;
  /* Disable Android and iOS callouts*/
}

#layers-menu {
  width:200px;
  top: 48px;
  bottom: 0;
  right:0;
  padding: 0;
  margin: 0;
  background-color: color(base);
  box-sizing: border-box;
  position: fixed;
  z-index: 1120;
  list-style-type: none;
  overflow-y:scroll;

  // TODO: make the scroll bar a bit fancier

  #add-layer-button {
    path {
      fill:color(menu, foreground);
    }
    svg {
      position:relative;
      margin-right:10px;
    }
    position:relative;
    justify-content: center;
    display:flex;
    align-items:center;
    margin-top:2px;
    font-size: 1.2em;
    color: color(menu, foreground);
    height: 100%;
    width: 100%;
    padding: 17px;
    background: none;
    border: none;
    cursor: pointer;
    background-color: color(menu);
    
    transition: color 0.2s, background-color 0.2s;
  }

  #add-layer-button:hover {
    color: color(base, foreground, bold);
    background-color: color(base, foreground, default);
  }
}

.selected-layer {
  ul.layer-buttons li{
    visibility:visible;
  }

  color: color(base, foreground, bold);
  background-color: color(base, foreground, default);
}

.layers-menu-entry {
  cursor:pointer;
  margin-top:2px;
  font-size: 1em;
  color: color(base, foreground, text);
  background-color: color(menu, background);
  display:inline-block;
  height:50px;
  width:100%;
  display:flex;
  align-items:center;

  ul.layer-buttons {
    top:0;
    left:0;
    margin:0;
    padding:0;
    box-sizing:border-box;
    position:relative;
    height:100%;
    list-style:none;

    path {
      fill: color(base, foreground);
    }
    li:hover {
      background: color(base, background, hover);
      path {
        fill: color(base, foreground, hover);
      }
    }

    li {
      visibility:hidden;
      height:50%;
    }
  }

  .lock-layer-button, .hide-layer-button {
    color: color(menu, foreground);
    background: none;
    border: none;
    cursor: pointer;
    background-color: color(menu);
    transition: color 0.2s, background-color 0.2s;
    height:100%;
    position:relative;
  }

  canvas {
    display:inline-block;
    height:50px;
    width:50px;
    background-color:lightgrey;
    left:4px;
  }

  p {
    right:0;
    display:inline-block;
    padding-left:10px;
    height:18px;
    overflow:hidden;
    position:relative;
  }

  transition: color 0.1s, background-color 0.1s;
  -moz-transition: color 0.1s, background-color 0.1s;
  -webkit-transition: color 0.1s, background-color 0.1s;
}

.layers-menu-entry:hover, .selected-layer {
  ul.layer-buttons li{
    visibility:visible;
  }

  color: color(base, foreground, bold);
  background-color: color(base, foreground, default);
}

//don't let svg handle click events, just send to parents
svg {
  pointer-events: none;
  path {
    pointer-events: none;
  }
}

//remove blue outline in chrome
*:focus {
  outline: 0 !important;
}

.weak {
  font-size: 0.8em;
  color: color(base,foreground,weak);
}

.drawingCanvas {
  cursor: url('/pixel-art-where-to-start/pencil-tool-cursor.png');

  border: solid 1px #fff;
  image-rendering:optimizeSpeed;             /* Legal fallback */
  image-rendering:-moz-crisp-edges;          /* Firefox        */
  image-rendering:-o-crisp-edges;            /* Opera          */
  image-rendering:-webkit-optimize-contrast; /* Safari         */
  image-rendering:optimize-contrast;         /* CSS3 Proposed  */
  image-rendering:crisp-edges;               /* CSS4 Proposed  */
  image-rendering:pixelated;                 /* CSS4 Proposed  */
  -ms-interpolation-mode:nearest-neighbor;   /* IE8+           */
  width: 400px;
  height: 400px;
  position: fixed;
  display:none;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.64);
  background-color:transparent;
}

#checkerboard {
  z-index:1;
}

#pixel-canvas {
  z-index:2;
  background:transparent;
}

#tmp-canvas {
  z-index:3;
  background:transparent;
}

#vfx-canvas {
  z-index:-5000;
  background:transparent;
}

#eyedropper-preview {
  position: absolute;
  width: 45px;
  height: 45px;
  border-radius: 30px;
  border: solid 10px red;
  z-index: 1200;
  display: none;
  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25), inset 0 0 6px 0 rgba(0, 0, 0, 0.2);
  pointer-events: none;
  &.dark {
    box-shadow: 0 0 8px 0 rgba(255, 255, 255, 0.5), inset 0 0 6px 0 rgba(255, 255, 255, 0.5);
  }
}

#brush-preview {
  position: absolute;
  border: solid 1px #fff;
  z-index: 1200;
  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.5), inset 0 0 2px 0 rgba(0, 0, 0, 0.5);
  pointer-events: none;
  left: -500px;
  &.dark {
    border: solid 1px #000;
    box-shadow: 0 0 3px 0 rgba(255, 255, 255, 0.8), inset 0 0 3px 0 rgba(255, 255, 255, 0.8);
  }
}

#canvas-view {
  bottom: 0px;
  left: 64px;
  right: 48px;
  top: 48px;
  cursor: none;
  position: fixed;
  display: block;
}

#canvas-view-shadow {
  box-shadow: inset 0px 0px 4px 0px rgba(0, 0, 0, 0.4);
  position: fixed;
  bottom: 0px;
  left: 64px;
  right: 48px;
  top: 48px;
  display: block;
  pointer-events: none;
}
/* ... */

